bin/testsuite/tests/compiler/src/errors/compiler4996.swg
#global testerror "Err0138"
public #test
{
}